# aria

./: .gitattributes  .gitignore  New Piano Score - forced 4.10.mscx  New Piano Score - forced 4.20.mscx  New Piano Score - forced 4.70.mscx  New Piano Score.mscx  README.md
.github/workflows/: build_all.yml  build_backend.yml  build_linux.yml  build_linux_arm32.yml  build_macos.yml  build_wasm.yml  build_windows.yml  build_without_qt.yml  check_codestyle.yml  check_unit_tests.yml  check_visual_tests.yml  cleanup_ccache.yml  deploy.yml  translate_lupdate.yml  translate_tx_pull_to_s3.yml  translate_tx_push.yml  update_learn_playlists.yml  update_release_info.yml  update_release_info_clear.yml
MuseReaderiOS/: .gitignore  Aria-Info.plist  Local.example.xcconfig  OPEN_SOURCE_COMPLIANCE.md  PlaybackArchitectureNotes.md  THIRD_PARTY_NOTICES.md
MuseReaderiOS/Aria.xcodeproj/: project.pbxproj
MuseReaderiOS/Aria.xcodeproj/xcshareddata/xcschemes/: Aria.xcscheme
MuseReaderiOS/Config/: Aria.xcconfig
MuseReaderiOS/MuseReaderiOS/: ContentView.swift  MuseReaderiOSApp.swift
MuseReaderiOS/MuseReaderiOS/App/: MuseReaderAppModel.swift  MusicNotationFont.swift
MuseReaderiOS/MuseReaderiOS/Assets.xcassets/AriaLogoMark.imageset/: Contents.json
MuseReaderiOS/MuseReaderiOS/Assets.xcassets/ScoreReaderStackedChord.imageset/: Contents.json
MuseReaderiOS/MuseReaderiOS/Bridge/: MSRZipArchive.cpp  MSRZipArchive.hpp  MuseReaderiOS-Bridging-Header.h  MuseScorePackageBridge.h  MuseScorePackageBridge.mm  MuseScoreRenderCoreBridge.h  MuseScoreRenderCoreBridge.mm  QtStaticPluginImports.mm
MuseReaderiOS/MuseReaderiOS/Models/: LibrarySetlistFolder.swift  NewScoreDraft.swift  NewScoreInstrumentCatalog.swift  ReaderRecentDocument.swift  ScoreDocument.swift  ScoreReaderNotationModels.swift  ScoreReaderState.swift  ScoreReaderStateAutosave.swift  ScoreReaderStateEditing.swift  ScoreReaderStatePages.swift  ScoreReaderStatePlayback.swift  ScoreSession.swift
MuseReaderiOS/MuseReaderiOS/Resources/Legal/: MuseScore_General-License.md  MuseScore_General_HQ-License.md  Qt-NOTICE.txt  THIRD_PARTY_NOTICES.md
MuseReaderiOS/MuseReaderiOS/Services/: LibrarySetlistStore.swift  LiveScoreRenderSession.swift  MIDIInputController.swift  MSCXMusicXMLConverter.swift  ManagedScoreLibrary.swift  NativeNotePreviewController.swift  NativePlaybackController.swift  RecentDocumentsStore.swift  ReviewRequestTracker.swift  ScoreDocumentService.swift  ScoreSessionService.swift
MuseReaderiOS/MuseReaderiOS/Views/: CompatibilityViewModifiers.swift  CreateNewScoreView.swift  DocumentRowView.swift  LibraryView.swift  OpenSourceLegalView.swift  ScoreDetailView.swift  ScoreReaderChordEntry.swift  ScoreReaderChromeBar.swift  ScoreReaderContextToolbars.swift  ScoreReaderEditingDeck.swift  ScoreReaderExportPanel.swift  ScoreReaderFloatingPalette.swift  ScoreReaderKeyboardShortcuts.swift  ScoreReaderMoreEditors.swift  ScoreReaderNoteEntrySurface.swift  ScoreReaderPageCanvas.swift  ScoreReaderPickupEditor.swift  ScoreReaderPitchKeyboard.swift  ScoreReaderTextEditing.swift  ScoreReaderToolButtons.swift  ScoreReaderView.swift  ZoomableImageView.swift
MuseReaderiOS/MuseReaderiOSTests/: MSCXMusicXMLConverterTests.swift  MuseReaderiOSTests.swift
MuseReaderiOS/MuseReaderiOSTests/ConverterFixtures/: gaps-dots-accidentals.mscx  piano-grand-staff.mscx  single-staff-notes-rests.mscx  source-measure-numbers.mscx  ties-slurs.mscx  two-voices-one-staff.mscx
MuseReaderiOS/MuseReaderiOSUITests/: MuseReaderiOSUITests.swift  MuseReaderiOSUITestsLaunchTests.swift
buildscripts/cmake/: SetupBuildEnvironment.cmake
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
sandbox/engraving/: CMakeLists.txt  main.cpp  score_render_audio.cpp  score_render_core.cpp  score_render_core.h  score_render_core_facade.inc  score_render_corruption.cpp  score_render_debug_link_stubs.cpp  score_render_edit_commands.cpp  score_render_edit_state.cpp  score_render_export.cpp  score_render_open_save.cpp  score_render_pages.cpp  score_render_playback.cpp  score_render_private.cpp  score_render_runtime.cpp
src/engraving/: CMakeLists.txt  engravingmodule.cpp
src/engraving/dom/: chordlist.cpp  excerpt.cpp  masterscore.cpp  masterscore.h  measure.cpp  score.cpp  spanner.cpp
src/engraving/editing/: edit.cpp  editmeasures.cpp
src/engraving/infrastructure/: mscwriter.cpp
src/engraving/playback/renderers/: bendsrenderer.cpp
src/engraving/rendering/: paintoptions.h
src/engraving/rendering/score/: chordlayout.cpp  headerfooterlayout.cpp  headerfooterlayout.h  horizontalspacing.cpp  layoutcontext.h  markerlayout.cpp  masklayout.cpp  scorehorizontalviewlayout.cpp  scorepageviewlayout.cpp  scoreverticalviewlayout.cpp  slurtielayout.cpp  systemlayout.cpp
src/engraving/rw/: mscloader.cpp
src/engraving/rw/read114/: read114.cpp
src/engraving/rw/read410/: tread.cpp
src/engraving/rw/read460/: tread.cpp
src/engraving/rw/write/: twrite.cpp
src/engraving/tests/: msczfile_tests.cpp  parts_tests.cpp
src/framework/audio/devtools/: inputlag.h
src/framework/draw/: CMakeLists.txt  drawmodule.cpp
src/framework/draw/cmake/: SetupHarfBuzz.cmake
src/framework/global/api/: apiutils.h
src/framework/global/io/internal/: filesystem.h
