cmake_minimum_required(VERSION 3.26)

project(score_render_probe LANGUAGES C CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(MU_ROOT ${CMAKE_CURRENT_LIST_DIR}/../..)
set(MUSE_FRAMEWORK_PATH ${MU_ROOT})
set(MUSE_FRAMEWORK_SRC_PATH ${MU_ROOT}/src/framework)
set(PROJECT_ROOT_DIR ${MU_ROOT})
set(THIRDPARTY_DIR ${MU_ROOT}/thirdparty)

list(PREPEND CMAKE_MODULE_PATH
    ${MU_ROOT}
    ${MU_ROOT}/buildscripts
    ${MU_ROOT}/buildscripts/cmake
    ${MU_ROOT}/src/framework/cmake
)

set(SCORE_RENDER_QT_TARGET_ROOT "" CACHE PATH "Target Qt SDK root for the standalone MuseScore render core.")
set(SCORE_RENDER_QT_HOST_ROOT "" CACHE PATH "Host Qt SDK root for the standalone MuseScore render core.")

if(SCORE_RENDER_QT_TARGET_ROOT)
    list(PREPEND CMAKE_PREFIX_PATH ${SCORE_RENDER_QT_TARGET_ROOT})
endif()

if(SCORE_RENDER_QT_HOST_ROOT)
    list(PREPEND CMAKE_PREFIX_PATH ${SCORE_RENDER_QT_HOST_ROOT})
    set(QT_HOST_PATH ${SCORE_RENDER_QT_HOST_ROOT} CACHE PATH "" FORCE)
    set(QT_ADDITIONAL_HOST_PACKAGES_PREFIX_PATH ${SCORE_RENDER_QT_HOST_ROOT} CACHE STRING "" FORCE)
endif()

if (EXISTS "/opt/homebrew/lib/cmake/Qt6/Qt6Config.cmake")
    list(PREPEND CMAKE_PREFIX_PATH
        /opt/homebrew
        /opt/homebrew/lib/cmake
        /opt/homebrew/opt/harfbuzz/lib/cmake
    )
endif()

include(GetPaths)
include(${MU_ROOT}/src/framework/cmake/MuseDeclareOptions.cmake)

set(MUSE_QT_SUPPORT ON CACHE BOOL "" FORCE)
set(MUSE_ENABLE_UNIT_TESTS OFF CACHE BOOL "" FORCE)
set(MUSE_COMPILE_USE_PCH OFF CACHE BOOL "" FORCE)
set(MUSE_COMPILE_USE_UNITY OFF CACHE BOOL "" FORCE)
if(CMAKE_SYSTEM_NAME STREQUAL "iOS")
    set(ENGRAVING_NO_API ON CACHE BOOL "" FORCE)
    set(MUE_COMPILE_USE_SYSTEM_FREETYPE OFF CACHE BOOL "" FORCE)
    set(MUE_COMPILE_USE_SYSTEM_HARFBUZZ OFF CACHE BOOL "" FORCE)
    set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE BOTH CACHE STRING "" FORCE)
else()
    set(ENGRAVING_NO_API OFF CACHE BOOL "" FORCE)
    set(MUE_COMPILE_USE_SYSTEM_FREETYPE ON CACHE BOOL "" FORCE)
    set(MUE_COMPILE_USE_SYSTEM_HARFBUZZ ON CACHE BOOL "" FORCE)
endif()
set(MUE_BUILD_ENGRAVING_QML OFF CACHE BOOL "" FORCE)
set(MUE_BUILD_ENGRAVING_TESTS OFF CACHE BOOL "" FORCE)
set(MUE_BUILD_ENGRAVING_DEVTOOLS OFF CACHE BOOL "" FORCE)
set(MUE_BUILD_ENGRAVING_PLAYBACK ON CACHE BOOL "" FORCE)
set(MUSICXML_NO_INTERNAL ON CACHE BOOL "" FORCE)

include(SetupBuildEnvironment)
include(GetPlatformInfo)
include(${MU_ROOT}/src/framework/cmake/MuseSetupConfiguration.cmake)
include(${MU_ROOT}/src/framework/audio/thirdparty/fluidsynth/fluidsynth.cmake)

find_package(Qt6 6.3 REQUIRED COMPONENTS Core Gui Svg Qml Network)

qt_standard_project_setup()

add_subdirectory(${MU_ROOT}/src/framework/global global)
add_subdirectory(${MU_ROOT}/src/framework/draw draw)
add_subdirectory(${MU_ROOT}/src/engraving engraving)
add_subdirectory(${MU_ROOT}/src/importexport/musicxml musicxml)

# Embed the MPE articulation profiles (pizzicato, tremolo, mute, etc.) directly
# into the render core so it has the same articulation patterns that MuseScore
# loads from :/mpe/resources on desktop. This avoids depending on Qt resource
# init or an IFileSystem inside the minimal iOS render core.
set(MPE_PROFILE_FAMILIES strings winds keyboard percussion voice)
set(MPE_PROFILES_GENERATED_CPP "${CMAKE_CURRENT_BINARY_DIR}/articulation_profiles_embedded.cpp")
set(_mpe_embed "// Auto-generated by sandbox/engraving/CMakeLists.txt. Do not edit.\n")
string(APPEND _mpe_embed "#include <map>\n#include <string>\n\n")
string(APPEND _mpe_embed "namespace msr { namespace render {\n\n")
string(APPEND _mpe_embed "const std::map<std::string, std::string>& embeddedArticulationProfiles()\n{\n")
string(APPEND _mpe_embed "    static const std::map<std::string, std::string> data = {\n")
foreach(_mpe_fam ${MPE_PROFILE_FAMILIES})
    set(_mpe_file "${MU_ROOT}/src/framework/mpe/resources/general_${_mpe_fam}_articulations_profile.json")
    file(READ "${_mpe_file}" _mpe_json)
    string(APPEND _mpe_embed "        { \"${_mpe_fam}\", R\"MZJSONPROFILE(\n${_mpe_json}\n)MZJSONPROFILE\" },\n")
endforeach()
string(APPEND _mpe_embed "    };\n    return data;\n}\n\n}} // namespace msr::render\n")
file(WRITE "${MPE_PROFILES_GENERATED_CPP}" "${_mpe_embed}")

set(score_render_core_common_sources
    score_render_core.cpp
    score_render_core.h
    ${MPE_PROFILES_GENERATED_CPP}
    ${FLUIDSYNTH_SRC}
    ${MU_ROOT}/src/importexport/midi/internal/midishared/generalmidi.cpp
    ${MU_ROOT}/src/importexport/midi/internal/midishared/generalmidi.h
    ${MU_ROOT}/src/importexport/midi/internal/midishared/midievent.h
    ${MU_ROOT}/src/importexport/midi/internal/midishared/midifile.cpp
    ${MU_ROOT}/src/importexport/midi/internal/midishared/midifile.h
    ${MU_ROOT}/src/importexport/midi/internal/midiexport/exportmidi.cpp
    ${MU_ROOT}/src/importexport/midi/internal/midiexport/exportmidi.h
)

set(score_render_core_common_includes
    ${MU_ROOT}
    ${MU_ROOT}/src
    ${MU_ROOT}/src/framework
    ${MU_ROOT}/src/framework/global
    ${MU_ROOT}/src/framework/draw
    ${MU_ROOT}/src/engraving
    ${MU_ROOT}/src/importexport/midi
    ${MU_ROOT}/src/importexport/musicxml
    ${FLUIDSYNTH_INC}
)

set(score_render_core_common_links
    muse::global
    muse::draw
    engraving
    "$<LINK_LIBRARY:WHOLE_ARCHIVE,iex_musicxml>"
    Qt6::Core
    Qt6::Gui
    Qt6::Svg
    Qt6::Qml
    Qt6::Network
)

if(CMAKE_SYSTEM_NAME STREQUAL "iOS")
    add_library(MuseScoreRenderCore STATIC
        ${score_render_core_common_sources}
    )

    target_include_directories(MuseScoreRenderCore PUBLIC
        ${score_render_core_common_includes}
    )

    target_link_libraries(MuseScoreRenderCore PRIVATE
        ${score_render_core_common_links}
    )

    target_compile_definitions(MuseScoreRenderCore PRIVATE
        ${FLUIDSYNTH_DEF}
    )

    set_target_properties(MuseScoreRenderCore PROPERTIES
        FRAMEWORK TRUE
        OUTPUT_NAME MuseScoreRenderCore
        PUBLIC_HEADER score_render_core.h
        LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
        XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED NO
        XCODE_ATTRIBUTE_DEFINES_MODULE YES
    )
else()
    add_library(score_render_core
        ${score_render_core_common_sources}
    )

    target_include_directories(score_render_core PUBLIC
        ${score_render_core_common_includes}
    )

    target_link_libraries(score_render_core PUBLIC
        ${score_render_core_common_links}
    )

    target_compile_definitions(score_render_core PRIVATE
        ${FLUIDSYNTH_DEF}
    )

    add_executable(score_render_probe
        main.cpp
    )

    target_include_directories(score_render_probe PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}
    )

    target_link_libraries(score_render_probe PRIVATE
        score_render_core
    )
endif()
